style(backend): formatage mécanisé par google-java-format
120 fichiers reformatés. La charte §10 impose un formateur automatique et
interdit qu'un code non formaté soit fusionné.

google-java-format ne se configure pas, et c'est précisément l'intérêt : il
retire le sujet des revues de code, où il n'a rien à faire. Le contrôle est
attaché à `validate` pour échouer avant la compilation plutôt qu'après les
tests, et `spotless:apply` corrige en une commande.

Diff volumineux mais purement mécanique : aucune ligne de logique n'est
touchée. C'est pour cela qu'il fait l'objet d'un commit séparé, afin de ne
pas noyer une revue de fond.

Vérifié après reformatage : 44 tests, cliquet de couverture tenu, build vert.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>